# social-network

./: .dockerignore  .gitignore  .prettierrc.json  Dockerfile  app-setup.sh  base-deps.sh  docker-compose.yaml  poetry-node.sh  pyproject.toml  pytest.ini  requirements.txt  teste.py
network/: admin.py  api_views.py  apps.py  models.py  schemas.py  signals.py  urls.py  utility.py  views.py
network/frontend/: .eslintrc.json  package.json  pnpm-lock.yaml
network/frontend/src/: index.js  main.css
network/frontend/src/components/: App.js  Following.js  Home.js  NewPost.js  ScrollToTop.js  ToastMessage.js
network/frontend/src/components/Feed/: Feed.js  PageControl.js
network/frontend/src/components/Feed/Post/: Comment.js  EditPost.js  NewComment.js  NewReply.js  Post.js
network/frontend/src/components/Profile/: Profile.js  UpdateProfile.js
network/frontend/src/context/: DataContext.js
network/frontend/src/hooks/: useControlledTextarea.js  useEditPost.js  useFollow.js  useLike.js  useNewComment.js  useNewPost.js  usePaginatedPosts.js  useProfile.js  useToast.js  useToggle.js  useUpdateProfile.js
network/frontend/src/utils/: axiosAPI.js
network/migrations/: 0001_initial.py
network/scss/: main.scss
network/static/network/: index.css  index.css.map  navLinks.js
network/templates/network/: index.html  layout.html  login.html  register.html
network/tests/: test_api.py  test_user_model.py  test_user_profile.py
project4/: settings.py  urls.py
